[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clanker"
version = "4.0.0"
description = "Detect hardware and choose GGUF models that fit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "clanker"},
]

[project.scripts]
clanker = "clanker.__main__:main"
gguf-fit = "clanker.__main__:main"  # deprecated, remove in 5.x

[project.urls]
Homepage = "https://github.com/gguf-fit/gguf-fit"

[tool.setuptools.packages.find]
where = ["src"]